Added option to print qr code on choice

--- a/PrintManager/App.config
+++ b/PrintManager/App.config
@@ -6,5 +6,6 @@
   <appSettings>
     <add key="PrinterName" value="PDF24" />
     <add key="LogoImagePath" value="C:\\Users\\Khizir Farrukh\\Desktop\\image.jpg" />
+    <add key="PrintQRCode" value="false" />
   </appSettings>
 </configuration>
